lib/translator/test/fixtures/ok/raw/loop-repeat.prg
PROGRAM repeat_until
BEGIN
    REPEAT
        0
    UNTIL(false)
END
