lib/translator/test/fixtures/error/raw/undefined-func.prg
PROGRAM undefined_func
BEGIN
    waka()
END
